--- a/scale/scale.cfg
+++ b/scale/scale.cfg
@@ -1,5 +1,5 @@
-NODE      ssabogal@pc-c220m4-r01-01.wisc.cloudlab.us
-NODE      ssabogal@pc-c220m4-r01-02.wisc.cloudlab.us
-SERVER    ssabogal@pc-c220m4-r01-01.wisc.cloudlab.us
-FORWARDER ssabogal@pc-c220m4-r01-02.wisc.cloudlab.us
+NODE      xiangvpn@pc-c220m4-r04-15.wisc.cloudlab.us
+NODE      xiangvpn@pc-c220m4-r04-11.wisc.cloudlab.us
+SERVER    xiangvpn@pc-c220m4-r04-15.wisc.cloudlab.us
+FORWARDER xiangvpn@pc-c220m4-r04-11.wisc.cloudlab.us
 SIZE      20
